[tool.black]
# https://www.python.org/dev/peps/pep-0008/#maximum-line-length
line-length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 79

[tool.pytest.ini_options]
addopts = "--cov"

[tool.bandit.assert_used]
skips = ['**/*_test.py', '**/test_*.py']

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bumplus"
authors = [{ name = "Wade Zhang", email = "dochang@gmail.com" }]
readme = "README.rst"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Operating System :: OS Independent",
]
dynamic = ["version", "description"]
requires-python = '>=3.6'
dependencies = ["pytoml", "Jinja2"]

[project.urls]
Home = "https://github.com/dochang/bumplus"
Source = "https://github.com/dochang/bumplus"
"Issue Tracker" = "https://github.com/dochang/bumplus/issues"

[project.scripts]
bumplus = "bumplus:main"
