[metadata]
name = bumplus
version = 0.10.1
author = Wade Zhang
author_email = dochang@gmail.com
license = MIT
description = Bump the version in the project files.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/dochang/bumplus
project_urls =
    Bug Tracker = https://github.com/dochang/bumplus/issues
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8.1
install_requires =
    pytoml
    Jinja2

[options.entry_points]
console_scripts =
    bumplus = bumplus:main
